--- a/index.html
+++ b/index.html
@@ -4,104 +4,96 @@
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="#">
 </head>
 <body>
 
 
   <div class="keys">
-    <div data-key="65" class="key" id="A">
+    <div data-key="65" class="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
     </div>
-    <div data-key="83" class="key" id="S">
+    <div data-key="83" class="key">
       <kbd>S</kbd>
       <span class="sound">hihat</span>
     </div>
-    <div data-key="68" class="key" id="D">
+    <div data-key="68" class="key">
       <kbd>D</kbd>
       <span class="sound">kick</span>
     </div>
-    <div data-key="70" class="key" id="F">
+    <div data-key="70" class="key">
       <kbd>F</kbd>
       <span class="sound">openhat</span>
     </div>
-    <div data-key="71" class="key" id="G">
+    <div data-key="71" class="key">
       <kbd>G</kbd>
       <span class="sound">kick2</span>
     </div>
-    <div data-key="72" class="key" id="H">
+    <div data-key="72" class="key">
       <kbd>H</kbd>
       <span class="sound">ride</span>
     </div>
-    <div data-key="74" class="key" id="J">
+    <div data-key="74" class="key">
       <kbd>J</kbd>
       <span class="sound">snare</span>
     </div>
-    <div data-key="75" class="key" id="K">
+    <div data-key="75" class="key">
       <kbd>K</kbd>
       <span class="sound">tom</span>
     </div>
-    <div data-key="76" class="key" id="L">
+    <div data-key="76" class="key">
       <kbd>L</kbd>
       <span class="sound">rim</span>
     </div>
   </div>
 
-  <audio class="keyA" data-key="65" src="sounds/clap.wav"></audio>
-  <audio class="keyS" data-key="83" src="sounds/hihat.wav"></audio>
-  <audio class="keyD" data-key="68" src="sounds/kick.wav"></audio>
-  <audio class="keyF" data-key="70" src="sounds/openhat.wav"></audio>
-  <audio class="keyG" data-key="71" src="sounds/boom.wav"></audio>
-  <audio class="keyH" data-key="72" src="sounds/ride.wav"></audio>
-  <audio class="keyJ" data-key="74" src="sounds/snare.wav"></audio>
-  <audio class="keyK" data-key="75" src="sounds/tom.wav"></audio>
-  <audio class="keyL" data-key="76" src="sounds/tink.wav"></audio>
+  <audio data-key="65" src="sounds/clap.wav"></audio>
+  <audio data-key="83" src="sounds/hihat.wav"></audio>
+  <audio data-key="68" src="sounds/kick.wav"></audio>
+  <audio data-key="70" src="sounds/openhat.wav"></audio>
+  <audio data-key="71" src="sounds/boom.wav"></audio>
+  <audio data-key="72" src="sounds/ride.wav"></audio>
+  <audio data-key="74" src="sounds/snare.wav"></audio>
+  <audio data-key="75" src="sounds/tom.wav"></audio>
+  <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  function removeTransition(e) {
+    if (e.propertyName !== 'transform') return;
+    e.target.classList.remove('playing');
+  }
+
   function playSound(e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-    if (!audio) return; //stop the function from running for all keys;
-    audio.currentTime = 0; //rewind to start
-    audio.play();
+    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+    if (!audio) return;
+
     key.classList.add('playing');
-   // console.log(e.keycode);
+    audio.currentTime = 0;
+    audio.play();
   }
-  
-  function buttonSound(btn) {
-    // const audioB = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    const bt = document.querySelector();
-    //if (!audioB) return;
-    console.log(bt)
-    console.log(buttonSound)
-    console.log(audioB)
-    audioB.currentTime = 0;
-    audioB.play();
-    btn.idList.add('playing')
-  } 
-  function removeTransition(e) {
-    if(e.propertyName !== 'transform') return; // stops transitioning while transitioning
-    this.classList.remove('playing')
+  function playSoundClick(e) {
+    const audio = document.querySelector(`audio[data-key="${e}"]`);
+    const key = document.querySelector(`div[data-key="${e}"]`);
+    if (!audio) return;
+
+    key.classList.add('playing');
+    audio.currentTime = 0;
+    audio.play();
   }
-  const keys = document.querySelectorAll('.key')
-  
+
+  const keys = Array.from(document.querySelectorAll('.key'));
   keys.forEach(key => key.addEventListener('transitionend', removeTransition));
   window.addEventListener('keydown', playSound);
   
-  const btns = document.querySelectorAll('.key')
-  btns.forEach(btn => btn.addEventListener('click', function(e) {
-    console.log(this.id)
-  }));
   const clicks = Array.from(document.querySelectorAll('.key'))
   clicks.forEach((press) => {
     press.addEventListener('click', () => {
       playSoundClick(press.getAttribute('data-key'))
     })
   })
-  
-  console.log(this.id)
 </script>
+
 
 
 
